Added swagger documentation for endpoints
