# app/handler/discovery.go
@@ -9,12 +9,25 @@ import (
 )
 
 type DiscoveryUser struct {
-	ID     uint   `json:"id"`
-	Name   string `json:"name"`
-	Gender string `json:"gender"`
-	Age    int    `json:"age"`
+	ID             uint    `json:"id"`
+	Name           string  `json:"name"`
+	Gender         string  `json:"gender"`
+	Age            int     `json:"age"`
+	DistanceFromMe float64 `json:"distance_from_me"`
 }
 
+type APIDiscoveryResponse struct {
+	Results []DiscoveryUser `json:"results"`
+}
+
+// @Discovery Discover Users
+// @Description To allow users to find potential matches to swipe on
+// @Accept json
+// @Produce json
+// @Success 200 {object} APIDiscoveryResponse
+// @Failure 400 {object} APIError
+// @Failure 500 {object} APIError
+// @Router /discovery [get]
 func (h *Handler) Discovery(ctx echo.Context) error {
 	userId, err := GetUserIDPathParam(ctx)
 	if err != nil {
@@ -33,16 +46,17 @@ func (h *Handler) Discovery(ctx echo.Context) error {
 		apiResponse = append(apiResponse, mapUserToDiscoveryUser(&user))
 	}
 
-	return ctx.JSON(http.StatusOK, CollectionResponse[DiscoveryUser]{
+	return ctx.JSON(http.StatusOK, APIDiscoveryResponse{
 		Results: apiResponse,
 	})
 }
 
 func mapUserToDiscoveryUser(user *store.User) DiscoveryUser {
 	return DiscoveryUser{
-		ID:     user.ID,
-		Name:   user.Name,
-		Gender: user.Gender,
-		Age:    user.Age,
+		ID:             user.ID,
+		Name:           user.Name,
+		Gender:         user.Gender,
+		Age:            user.Age,
+		DistanceFromMe: user.DistanceFromMe,
 	}
 }
